<resources>
    <string name="app_name">CovidApp</string>
    <string name="please_wait">Please wait</string>
    <string name="please_connect_to_the_internet">Please connect to the internet!</string>
    <string name="countries">Countries</string>
    <string name="about">About</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exit">Exit</string>
    <string name="really">Really exit app?</string>
    <string name="total">Total</string>
    <string name="confirmed">Confirmed</string>
    <string name="recovered">Recovered</string>
    <string name="deaths">Deaths</string>
    <string name="simptomi">SIMPTOMI</string>
</resources>