<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/menuTotal"
    android:id="@+id/fragments">

    <fragment
        android:id="@+id/menuTotal"
        android:name="hr.algebra.covidapp.TotalFragment"
        android:label="@string/total"
        tools:layout="@layout/fragment_total"/>
    <fragment
        android:id="@+id/menuCountries"
        android:name="hr.algebra.covidapp.CountriesFragment"
        android:label="@string/countries"
        tools:layout="@layout/fragment_countries"/>
    <fragment
        android:id="@+id/menuAbout"
        android:name="hr.algebra.covidapp.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about"/>
</navigation>