<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TotalFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/ivCovidWidth"
            android:layout_height="@dimen/ivCovidHeight"
            android:layout_marginLeft="@dimen/marginLeftCards"
            android:src="@drawable/bluelogo" />


        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/cvWidth"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/marginVerticalCards"
            android:layout_marginLeft="@dimen/marginLeftCards">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/confirmed"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/txtSize"></TextView>

                <TextView
                    android:id="@+id/totalConfirmed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2,797,000"
                    android:textColor="@color/colorConfirmed"
                    android:textSize="30sp"></TextView>
            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/cvWidth"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/marginVerticalCards"
            android:layout_marginLeft="@dimen/marginLeftCards">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recovered"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/txtSize"></TextView>

                <TextView
                    android:id="@+id/totalRecovered"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2,797,000"
                    android:textColor="@android:color/holo_green_dark"
                    android:textSize="30sp"></TextView>
            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/cvWidth"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/marginVerticalCards"
            android:layout_marginLeft="@dimen/marginLeftCards">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deaths"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/txtSize"></TextView>

                <TextView
                    android:id="@+id/totalDeaths"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2,797,000"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="30sp"></TextView>
            </LinearLayout>


        </androidx.cardview.widget.CardView>


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/ivDoctorWidth"
            android:src="@drawable/doctor"

            />

    </LinearLayout>


</FrameLayout>